# chaim

./: .gitignore  Makefile  README.md  changelog  depends.py  dev-db.md  install.md  install_lambda.py  install_requirements.txt  o365.md  test-requirements.txt  vendor-requirements.txt  version.py
chaimlib/: assumedrole.py  botosession.py  chaim.py  cognitoclient.py  commandparse.py  envparams.py  filesystem.py  glue.py  iamclient.py  kmsclient.py  paramstore.py  permissions.py  slackiamdb.py  snsclient.py  stsclient.py  utils.py  wflambda.py
chalicelib/: assumedrole.py  botosession.py  chaim.py  cognitoclient.py  commandparse.py  envparams.py  filesystem.py  glue.py  iamclient.py  kmsclient.py  paramstore.py  permissions.py  slackiamdb.py  snsclient.py  stsclient.py  utils.py  wflambda.py
client/: INSTALL.md  Makefile  README.md  setup.py
cloudformation/: build_chaim.sh  chaim_cognito.yaml  chaim_cognito0.yaml  chaim_ec20.yaml  chaim_iam.yaml  chaim_iam0.yaml  chaim_iam1.yaml  chaim_iam_2.yaml  chaim_install_master.yaml  chaim_kms.yaml  chaim_kms0.yaml  chaim_parameters_cognito.json  chaim_parameters_kms.json  chaim_parameters_sredev.json  chaim_parameters_sredev.properties  chaim_policies.json  chaim_policies.yaml  chaim_policies_parameters.json  chaim_policies_parameters_sredev.json  chaim_rds0.yaml  chaim_root_template.yaml  chaim_sns0.yaml  deploy_chaim.sh  package_chaim.sh
docs/: dev-db.md  install.md  (+2 more)
lambda/chaim-account-sync/: chaim-accountsync-lambda-policy.json  pyproject.toml
lambda/chaim-account-sync/send/: Makefile  organisations.py
(+84 files in other folders)
